mariadb-statefulset.yaml
apiVersion: v1
kind: StatefulSet
metadata: 
  name: mariaDB
  labels:
  #key-value for our database
    app: mariaDB
spec:
  selector:
    matchLabels:
      app: mariaDB
    serviceName: mariadb-service
    replicas: 2
    template:
      metadata: 
        labels:
          app: mariaDB
      spec:
        #to make sure only one pod is created for every node
        topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: mariaDB
        restartPolicy: Always
        #container on dockerhub
        containers:
        - name: test-mariaDB
          image: mariadb:latest
          ports:
          - containerPort: 3306
          volumeMounts:
          - name: data
            mountPath: /var/lib/mysql
            subPath: mysql
          #to store data
          volumes:
          - name: mariadb-config-map
            configMap:
              name: mariadb-configmap
              #defaultMode: 0544
          - name: mariadb-config
            emptyDir: {}
          - name: initdb
            emptyDir: {}
    volumeClaimTemplates:
    - metadata:
        name: datadir
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10GB
