helloWorld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloWorld-service
spec:
  type: ClusterIP
  selector:
  #this has to match the label in deployment 
    app: helloWorld
  ports:
  - protocol: TCP
    port: 80
    #same port as in deployment
    targetPort: 8080
