helloWorldApp-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloWorldApp-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx
    #maybe separate services, default backend and backup to the second node
spec:
  tls:
  - host:
    - example.com 
    secretName: secret-tls
  rules: 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: helloWorld-service
            port:
              number: 80
